# librandomcrash

./: .gitignore  AUTHORS  Makefile.am  README  bootstrap.sh  configure.ac
common/: bus.c  proto.h
doc/: handlers.txt  launcher-interface.txt  overrides.txt
launcher/: Makefile.am  backtrace.c  bus.c  child.c  child.h  ixp.c  maps.c  maps.h  randomcrash.c  util.c  util.h
src/: Makefile.am  backtrace.c  bus.c  conf.c  conf.h  crash.c  getenv.c  handlers.c  handlers.h  librandomcrash.pc.in  librandomcrash.sym  log.c  log.h  lrc-libc.h  main.c  memory.c  memory.h  opendir.c  override.h  randomcrash.c  read.c  readdir.c  smalloc.c  smalloc.h  symbols.awk  symbols.list
src/handlers/: getenv.c  open.c
src/stat/: open.c
tests/: Makefile  forks.c  lrc-libc.c  t_opendir.c  t_readdir.c
